Add rank to honeys

--- a/app/views/honeys/_form.html.erb
+++ b/app/views/honeys/_form.html.erb
@@ -41,6 +41,11 @@
     <%= f.check_box :orientation_landscape %>
   </div>
 
+  <div class="field">
+    <%= f.label :rank %>
+    <%= f.number_field :rank %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
