--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -39,28 +39,14 @@
     <div class="row">
       <% @honeys_portrait.each do |honey| %>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 gallery-item">
-          <%= link_to honey.honeyimg.small.url, class: "gallery-link", data: { lightbox: "gallery", title: render(partial: "data_title", locals: {honey: honey}) } do %>
-            <div class="gallery-hover">
-              <div class="gallery-hover-content">
-                <i class="fa fa-search-plus fa-3x"></i>
-              </div>
-            </div>
-            <%= image_tag honey.honeyimg.small.url, class: "img-responsive img-rounded img-honey" %>
-          <% end %>
+          <%= render 'image', honey: honey %>
         </div>
       <% end %>
     </div>
     <div class="row">
       <% @honeys_landscape.each do |honey| %>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 gallery-item">
-          <%= link_to honey.honeyimg.small.url, class: "gallery-link", data: { lightbox: "gallery", title: render(partial: "data_title", locals: {honey: honey}) } do %>
-            <div class="gallery-hover">
-              <div class="gallery-hover-content">
-                <i class="fa fa-search-plus fa-3x"></i>
-              </div>
-            </div>
-            <%= image_tag honey.honeyimg.small.url, class: "img-responsive img-rounded img-honey" %>
-          <% end %>
+          <%= render 'image', honey: honey %>
         </div>
       <% end %>
     </div>
